[project]
name = "portfolio-that-talks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.4",
    "pyaudio>=0.2.14",
    "pymupdf>=1.25.4",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "streamlit>=1.44.0",
    "streamlit-tts>=0.0.7",
]
